Fixed legibility for alerts in dark mode

--- a/app/resources/assets/sass/accessible-dark-mode.scss
+++ b/app/resources/assets/sass/accessible-dark-mode.scss
@@ -34,6 +34,11 @@ tr, li, nav.mobile, nav.desktop, .cd-morph-dropdown, .cd-morph-dropdown .content
 .table {
 	background-color: rgb(52, 58, 64);
 }
+
 .table .thead-light th, .table th, .table td {
 	border-color: rgb(69, 77, 85) !important;
+}
+
+.alert > span {
+	color: rgb(0, 0, 0) !important
 }
